--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -1,11 +1,12 @@
-<h2>Sign up</h2>
+<div class="text-center">
+<h2>edit</h2>
 
-<%= form_with model: @admin, url: admin_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
-  <%= render "admins/shared/error_messages", resource: resource %>
+<%= form_with model:@customer, local:true do |f| %>
+ 
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :name %><br />
+    <%= f.email_field :name, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
@@ -22,8 +23,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "変更する" ,class:" btn btn-lg btn-primary mt-3"%>
   </div>
 <% end %>
-
-<%= render "admins/shared/links" %>
+</div>
