--- a/app/views/customers/posts/edit.html.erb
+++ b/app/views/customers/posts/edit.html.erb
@@ -1,15 +1,16 @@
-<h2>Sign up</h2>
+<div class="text-center">
+<h2>edit</h2>
 
-<%= form_with model: @admin, url: admin_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
-  <%= render "admins/shared/error_messages", resource: resource %>
+<%= form_with model:@post, local:true do |f| %>
+ 
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :内容 %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :サプリ %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -22,8 +23,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "変更する" ,class:" btn btn-lg btn-primary mt-3"%>
   </div>
 <% end %>
-
-<%= render "admins/shared/links" %>
+</div>
