--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,9 +1,7 @@
 <div class="text-center">
-  <main class="form-signin">
-    <form>
     <h2 class="h3 mb-3 fw-normal">Sign up</h2>
     
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
         <%= render "customers/shared/error_messages", resource: resource %>
         
         <div class="field">
@@ -35,6 +33,4 @@
       <% end %>
     
     <%= render "customers/shared/links" %>
-    </form>
-  </main>
-</div>"
+</div>
