--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,54 +12,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
-       <a class="navbar-brand" href="/posts">ホーム</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav4">
-            <ul class="navbar-nav">
-            <%# if user_signed_in? %>
-            
-                <li><%= link_to posts_path, class:"nav-link  active btn-block" do %>
-                <i class="fas fa-home">Home</i>
-                <% end %></li>
-                
-                <li><%= link_to customers_path, class:"nav-link  active btn-block" do %>
-                <i class="fas fa-users">トレーニー</i>
-                <% end %></li>
-                
-                <li><%= link_to "", class:"nav-link  active btn-block" do %>
-                <i class="fas fa-book-open">投稿</i>
-                <% end %></li>
-                
-                <li><%= link_to "", method: :delete , class:"nav-link  active btn-block" do %>
-                <i class="fas fa-sign-out-alt">logout</i>
-                <% end %></li>
-            <%# else %>
-                <!-- <li class="nav-item active">
-                    <a class="nav-link" ><i class="fas fa-home"></i>Home<span class="sr-only">(current)</span></a>
-                </li>
-                
-                 <li><%= link_to "", class:"nav-link  active btn-block" do %>
-                <i class="fas fa-link">About</i>
-                <% end %></li>
-                
-                 <li><%= link_to "", class:"nav-link  active btn-block" do %>
-                <i class="fas fa-user-plus">sign up</i>
-                <% end %></li>
-                
-                <li class="nav-item active">
-                    <a class="nav-link" ><i class="fas fa-sign-in-alt"></i>login</a>
-                </li> -->
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            <%# end %>
-            </ul>
-       </div>
-    </nav>
+    <%= render "layouts/header" %>
 
     <%= yield %>
   </body>
