--- a/app/views/customers/posts/index.html.erb
+++ b/app/views/customers/posts/index.html.erb
@@ -1,7 +1,12 @@
     <div class="container">  
         <div class="row">
+            <div class="col-md-3 p-4 border rounded h-50 " >
+                
+                <%= render 'customers/customers/info' %>
+                <%= render 'customers/posts/form' %>
+                
+            </div>
             
-            <%= render 'customers/shared/posts' %>
               
             <div class="col-md-8 offset-md-1">
                 <% @posts.each do |post| %>
