--- a/app/views/customers/posts/show.html.erb
+++ b/app/views/customers/posts/show.html.erb
@@ -1,8 +1,13 @@
 <div class="container">  
         <div class="row">
             
-            <%= render 'customers/shared/posts' %>
-              
+            <div class="col-md-3 p-4 border rounded h-50 " >
+                
+                <%= render 'customers/customers/info' %>
+                <%= render 'customers/posts/form' %>
+                
+            </div>
+            
             <div class="col-md-8 offset-md-1">
                 <div class=" col-8 p-4  border rounded mt-3 ">
                     
