--- a/app/views/customers/posts/show.html.erb
+++ b/app/views/customers/posts/show.html.erb
@@ -4,22 +4,40 @@
             <div class="col-md-3 p-4 border rounded h-50 " >
                 
                 <%= render 'customers/customers/info' %>
-                <%= render 'customers/posts/form' %>
+                <%= render 'customers/posts/form', post: @post_new %>
                 
             </div>
             
             <div class="col-md-8 offset-md-1">
-                <div class=" col-8 p-4  border rounded mt-3 ">
+                <div class=" col-9 p-4  border rounded mt-3 ">
+                    <ul>
+                        <li><%= @post.content %></li>
+                        <li><%= @post.supplement %></li>
+                        <li>ジム</li>
+                        <li>タグ</li>
+                    </ul>
                     
-                    デカい
-                    コメント
-                    日時
-                    内容
-                    ジム
-                    タグ
-                    <%= link_to "編集", edit_customer_path(@post.id) %>
+                    <td>
+
+                    </td>
+                    <td><%= render "customers/post_comments/post_comment" %></td>
+                    <div class="h3 pt-3"> コメント一覧</div>
+                    <div>
+                        <% @post_comments.each do |comment| %>
+                            <%= comment.comment %>
+                		    <%= link_to customer_path(comment.customer) do %>
+                  		        <%= comment.customer.name %>
+                		    <% end %>
+                            <% if current_customer == comment.customer %>
+                                <%= link_to 'Destroy',post_post_comment_path(comment.post_id, comment.id), class: 'btn-sm btn-danger', method: :delete ,remote: true%>
+                            <% end %>
+                        <% end %>
+                    </div>
+                    
                 </div>
-            <%= render "customers/post_comments/post_comment" %>    
+                <%= render "customers/favorites/favorite", post: @post %>
+                <%= @post.favorites.count %>
+                <%= link_to "編集", edit_post_path(@post.id) %>
             </div>
         </div>
     </div>
