--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -5,7 +5,7 @@
             <div class="col-md-3 p-4 border rounded h-50 " >
                 
                 <%= render 'customers/customers/info' %>
-                <%= render 'customers/posts/form' %>
+                <%= render 'customers/posts/form', post: @post %>
                 
             </div>
             
