--- a/app/views/customers/posts/_form.html.erb
+++ b/app/views/customers/posts/_form.html.erb
@@ -1,4 +1,4 @@
-    <%= form_with model:@post ,local: true do |f| %>
+    <%= form_with model:post ,local: true do |f| %>
         <div class="form-group">
             <%= f.label :supplement %>
             <%= f.text_field :supplement, class: 'form-control book_title' %>
