--- a/app/views/customers/posts/index.html.erb
+++ b/app/views/customers/posts/index.html.erb
@@ -10,7 +10,12 @@
             <div class="col-md-8 offset-md-1">
                 <% @posts.each do |post| %>
                 <div class=" col-8 p-4  border rounded mt-3 ">
-                    <i class="far fa-grin-alt"></i>
+                    <% if post.image.attached? %>
+                        　<%= image_tag post.image%>
+                    <% else %>
+                        　<%= image_tag 'no_image.jpg' %>
+                    <% end %>
+                    <%= render "customers/relationships/follow",customer: post %>
                     <div><%= post.supplement %></div>
                     <div><%= post.content %></div>
                     <div>いいね <%= post.favorites.count %></div>
