--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -1,31 +1,26 @@
-<div class="text-center">
-<h2>edit</h2>
+<div class="container">  
+  <div class="row center">
+    <div class="col-lg-5">
+    
+    <h2>edit</h2>
 
-<%= form_with model:@customer ,local:true do |f| %>
- 
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true%>
+          <%= form_with model:@customer ,local:true do |f| %>
+           
+          
+            <div class="mb-3">
+              <%= f.label :name %><br />
+              <%= f.text_field :name, autofocus: true%>
+            </div>
+            
+            <div class="mb-3">
+              <%= f.label :image %><br>
+              <%= f.file_field :image %>
+            </div>
+            
+            <div class="actions">
+              <%= f.submit "変更する" ,class:" btn btn-lg btn-primary mt-3"%>
+            </div>
+          <% end %>
+    </div>
   </div>
-
-  <!--
-  <div class="field">
-    <%#= f.label :password %>
-    <%# if @minimum_password_length %>
-    <em>(<%#= @minimum_password_length %> characters minimum)</em>
-    <%# end %><br />
-    <%#= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%#= f.label :password_confirmation %><br />
-    <%#= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-  -->
-
-  <div class="actions">
-    <%= f.submit "変更する" ,class:" btn btn-lg btn-primary mt-3"%>
-  </div>
-<% end %>
 </div>
