--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -11,6 +11,11 @@
             
             <div class="col-md-8 offset-md-1">
                 <div class=" col-8 p-4  border rounded mt-3 ">
+                <% if @customer.image.attached? %>
+                    <%= image_tag @customer.image%>
+                 <% else %>
+                     <%= image_tag 'no_image.jpg' %>
+                <% end %>
                 名前
                 ジム
                 サプリ
