--- a/app/views/customers/posts/show.html.erb
+++ b/app/views/customers/posts/show.html.erb
@@ -10,6 +10,18 @@
             
             <div class="col-md-8 offset-md-1">
                 <div class=" col-9 p-4  border rounded mt-3 ">
+                    <div class="col-8 d-flex">
+                        <div class="col-auto border rounded">
+                        <% if @post.image.attached? %>
+                            <%= image_tag @post.image%>
+                        <% else %>
+                            <%= image_tag 'no_image.jpg' %>
+                        <% end %>
+                        </div>
+                        <div class="col-auto ">
+                        <%= render "customers/relationships/follow",customer: @customer  %>
+                        </div>
+                    </div>
                     <ul>
                         <li><%= @post.content %></li>
                         <li><%= @post.supplement %></li>
@@ -22,18 +34,21 @@
                     </td>
                     <td><%= render "customers/post_comments/post_comment" %></td>
                     <div class="h3 pt-3"> コメント一覧</div>
-                    <div>
-                        <% @post_comments.each do |comment| %>
-                            <%= comment.comment %>
+                    <% @post_comments.each do |comment| %>
+                        <div class="col-5 pt-3">
+                            
                 		    <%= link_to customer_path(comment.customer) do %>
                   		        <%= comment.customer.name %>
                 		    <% end %>
+                		    <%= comment.comment %>
                             <% if current_customer == comment.customer %>
                                 <%= link_to 'Destroy',post_post_comment_path(comment.post_id, comment.id), class: 'btn-sm btn-danger', method: :delete ,remote: true%>
                             <% end %>
-                        <% end %>
-                    </div>
-                    
+                            
+                        </div>
+                    <% end %>
+                        
+
                 </div>
                 <%= render "customers/favorites/favorite", post: @post %>
                 <%= @post.favorites.count %>
