--- a/app/views/customers/customers/_info.html.erb
+++ b/app/views/customers/customers/_info.html.erb
@@ -1,15 +1,18 @@
 <table class="table" >
     <tbody>
-        <i class="far fa-grin-alt"></i>
-             <div>名前：<%= current_customer.name %></div>
+        <% if post.image.attached? %>
+                <%= image_tag post.image%>
+        <% else %>
+                <%= image_tag 'no_image.jpg' %>
+        <% end %>
+        <div>名前：<%= customer.name %></div>
         <tr>
-                            
-            <th scope="col">フォロー</th>
-            <th scope="col"></th>
+            <th>フォロー</th>
+	        <th><%= link_to customer.followings.count, customer_followings_path(customer) %></th>
         </tr>
         <tr>
-            <th scope="col">フォロワー</th>
-            <th scope="col"></th>
+            <th>フォロワー</th>
+	        <th><%= link_to customer.followers.count, customer_followers_path(customer) %></th>
         </tr>
     </tbody>
 </table>    
