--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -3,19 +3,19 @@
         <div class="row">
             
             <div class="col-md-3 p-4 border rounded h-50 " >
-                
-                <%= render 'customers/customers/info' %>
+                <!--ユーザーサイドバー-->
+                <%= render 'customers/customers/info' , post: @customer, customer: @customer%>
+                 <!--投稿フォーム-->
                 <%= render 'customers/posts/form', post: @post %>
                 
             </div>
             
             <div class="col-md-8 offset-md-1">
                 <div class=" col-8 p-4  border rounded mt-3 ">
-                <% if @customer.image.attached? %>
-                    <%= image_tag @customer.image%>
-                 <% else %>
-                     <%= image_tag 'no_image.jpg' %>
-                <% end %>
+                    
+                <!--画像-->
+                <%= render "customers/shared/image_attached", post: @customer %>
+                
                 名前
                 ジム
                 サプリ
