--- a/app/views/customers/posts/index.html.erb
+++ b/app/views/customers/posts/index.html.erb
@@ -2,7 +2,10 @@
         <div class="row">
             <div class="col-md-3 p-4 border rounded h-50 " >
                 
-                <%= render 'customers/customers/info' %>
+                <!--ユーザーサイドバー-->
+                <%= render 'customers/customers/info' , post: current_customer, customer: current_customer %>
+                
+                 <!--投稿フォーム-->
                 <%= render 'customers/posts/form', post: @post_new %>
                 
             </div>
@@ -10,12 +13,13 @@
             <div class="col-md-8 offset-md-1">
                 <% @posts.each do |post| %>
                 <div class=" col-8 p-4  border rounded mt-3 ">
-                    <% if post.image.attached? %>
-                        　<%= image_tag post.image%>
-                    <% else %>
-                        　<%= image_tag 'no_image.jpg' %>
-                    <% end %>
+                    
+                    <!--画像-->
+                    <%= render "customers/shared/image_attached", post: post %>
+                    
+                    <!--フォローボタン-->
                     <%= render "customers/relationships/follow",customer: post %>
+                    
                     <div><%= post.supplement %></div>
                     <div><%= post.content %></div>
                     <div>いいね <%= post.favorites.count %></div>
