--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -15,7 +15,7 @@
         <td><%= customer.id %></td>
         <td><%= customer.name %></td>
         <td><%= customer.email %></td>
-        <td class="btn-sm btn-danger">削除</td>
+        <td><%= link_to "削除",admins_customer_path(customer.id), method: :delete, class:"btn-sm btn-danger", data: { confirm: "削除しますか？" } %></td>
         
         <td></td>
       </tr>  
