--- a/app/views/customers/relationships/_follow.html.erb
+++ b/app/views/customers/relationships/_follow.html.erb
@@ -1,6 +1,6 @@
 <% if current_customer != customer %>
         <% if current_customer.following?(customer) %>
-          <%= link_to "フォロー外す", customer_relationships_path(customer),class:"btn btn-primary" , method: :delete %>
+          <%= link_to "フォロー外す", customer_relationships_path(customer),class:"btn btn-secondary" , method: :delete %>
         <% else %>
           <%= link_to "フォローする", customer_relationships_path(customer), class:"btn btn-primary" ,method: :post %>
         <% end %>
