--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,10 +24,7 @@
                     <i class="fas fa-sign-out-alt"> ログアウトする</i>
                 <% end %></li>
                 
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <li><%= render "customers/searches/search"%></li>
                 
             <% else %>
                 
