--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,23 +1,19 @@
 <header>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
-       <a class="navbar-brand" href="/"><i class="fas fa-heartbeat"></i></a>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+       <a class="navbar-brand" href="/"><%= image_tag 'muscle_icon.jpeg' %></a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav4">
             <ul class="navbar-nav">
             <% if customer_signed_in? %>
-            
-                <li><%= link_to posts_path, class:"nav-link  active btn-block" do %>
-                    <i class="fas fa-home"> Home</i>
-                <% end %></li>
                 
                 <li><%= link_to customers_path, class:"nav-link  active btn-block" do %>
                     <i class="fas fa-users"> トレーニー</i>
                 <% end %></li>
                 
-                <li><%= link_to "", class:"nav-link  active btn-block" do %>
-                    <i class="fas fa-book-open"> 投稿</i>
+                <li><%= link_to posts_path, class:"nav-link  active btn-block" do %>
+                    <i class="fas fa-clone"> 投稿</i>
                 <% end %></li>
                 
                 <li><%= link_to destroy_customer_session_path, method: :delete , class:"nav-link  active btn-block" do %>
@@ -26,8 +22,24 @@
                 
                 <li><%= render "customers/searches/search"%></li>
                 
-            <% else %>
+            <% elsif admin_signed_in? %>
+            
+                <li><%= link_to admins_posts_path, class:"nav-link  active btn-block" do %>
+                    <i class="fas fa-home"> 投稿一覧</i>
+                <% end %></li>
                 
+                <li><%= link_to admins_customers_path, class:"nav-link  active btn-block" do %>
+                    <i class="fas fa-users"> ユーザー一覧</i>
+                <% end %></li>
+                
+                <li><%= link_to destroy_admin_session_path, method: :delete , class:"nav-link  active btn-block" do %>
+                    <i class="fas fa-sign-out-alt"> ログアウトする</i>
+                <% end %></li>
+                
+                <li><%= render "customers/searches/search"%></li>
+            
+            <% else %>
+            
                 <li><%= link_to "/about", class:"nav-link  active btn-block" do %>
                     <i class="fas fa-link"> FitnessBoosterとは</i>
                 <% end %></li>
