--- a/app/assets/stylesheets/customers/homes.scss
+++ b/app/assets/stylesheets/customers/homes.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the customers/homes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.main{
+    width: 100%;
+    min-height: 100vh; 
+    background-image: image-url("sam-moqadam-vOZP2LojrHI-unsplash.jpg");
+    background-size:cover;
+}
+.top-btn{
+    background-color: #f5f5f5;
+    opacity: 0.9;
+    border-radius: 10px;
+}
