--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -1,26 +1,29 @@
-<div class="container">  
-  <div class="row center">
-    <div class="col-lg-5">
+
+<div class="text-center shadow">
     
     <h2>edit</h2>
 
           <%= form_with model:@customer ,local:true do |f| %>
            
           
-            <div class="mb-3">
-              <%= f.label :name %><br />
+            <div class="mb-4">
+              <%= f.label :名前 %><br />
               <%= f.text_field :name, autofocus: true%>
             </div>
             
-            <div class="mb-3">
-              <%= f.label :image %><br>
-              <%= f.file_field :image %>
+            <div class="mb-4">
+              <%= f.label :自己紹介 %><br>
+              <%= f.text_area :introduction%>
             </div>
+            
+            <label for="image">
+              <span class="button">プロフィール画像を選択</span><%= f.file_field :image, id: "image" %>
+            </label>
+            <div id="file-name"></div>
             
             <div class="actions">
               <%= f.submit "変更する" ,class:" btn btn-lg btn-primary mt-3"%>
             </div>
           <% end %>
-    </div>
-  </div>
+
 </div>
