--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -2,7 +2,7 @@
     <div class="container">  
         <div class="row">
             
-            <div class="col-md-3 p-4 border rounded h-50 " >
+            <div class="col-md-3 p-4 mt-5 border rounded shadow h-50 bg-light" >
                 <!--ユーザーサイドバー-->
                 <%= render 'customers/customers/info' , post: @customer, customer: @customer %>
                  <!--投稿フォーム-->
@@ -11,20 +11,26 @@
             </div>
             
             <div class="col-md-8 offset-md-1">
-                <div class=" col-8 p-4  border rounded mt-3 ">
+                <div class=" col-md-9 p-4 mt-5 border rounded shadow bg-light">
                     
-                <%= render "customers/relationships/follow" , customer: @customer %>   
-                <!--画像-->
-                <%= render "customers/shared/image_attached", post: @customer %>
+                    <div class="col d-flex">
+                        <!--プロフィール画像-->
+                        <div><%= render "customers/shared/image_attached", post: @customer %></div>
+                        <div class="pl-2"><%= @customer.name %></div>
+                        <!--フォローボタン-->
+                        <div  class="offset-md-3"><%= render "customers/relationships/follow" , customer: @customer %></div>
+                        
+                        <% if current_customer.id == @customer.id %>
+                            <div class="offset-md-3"><i class="fas fa-user-check fa-3x"></i></div>
+                        <% end %>
+                    </div>
+                    
+                    <div><%= @customer.introduction %></div>
+                    
+                    <% if current_customer.id == @customer.id %>
+                        <div class="offset-md-10"><%= link_to "編集" , edit_customer_path(@customer.id),class: "btn btn-success" %></div>
+                    <% end %>
                 
-                名前
-                ジム
-                サプリ
-                自己紹介
-                フォロー
-                <% if current_customer.id == @customer.id %>
-                <%= link_to "編集" , edit_customer_path(@customer.id) %>
-                <% end %>
                 </div>
             </div>
         </div>
