--- a/app/views/customers/homes/top.html.erb
+++ b/app/views/customers/homes/top.html.erb
@@ -1,9 +1,10 @@
-<main>
-    <div class="position-relative overflow-hidden p-md-5 text-center bg-light">
-        <div class="col-md-5 p-lg-5 mx-auto my-5">
-          <h1 class="display-4 fw-normal">FitnessBoosterへようこそ</h1>
-          <p class="lead fw-normal">限界を突破しよう</p>
-          <a class="btn btn-outline-secondary" href="/customers/sign_in">今すぐ始める</a>
+
+<main class="main">
+    <div class="text-center w-100">
+        <div class="top-btn col-md-6 p-lg-5 mx-auto">
+          <h1 class="display-6 fw-normal"><strong>FitnessBooster</strong>へようこそ</h1>
+          <p class="lead fw-normal">トレーニングを共有しよう</p>
+          <%= link_to "今すぐ始める", new_customer_session_path,class:"btn btn-danger" %>
         </div>
     </div>
 </main>
