--- a/app/views/customers/post_comments/_post_comment.html.erb
+++ b/app/views/customers/post_comments/_post_comment.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model:[@post,@post_comment], remote: true do |f| %>
+<%= form_with model:[@post,@post_comment], data: {remote: true} do  |f| %>
 <%= f.text_area :comment, placeholder:"コメントする",size:"60x5"  %><br>
 <%= f.submit '送信', class:"btn btn-light"%>
-<% end %>
+<% end %>z
