--- a/app/views/customers/searches/index.html.erb
+++ b/app/views/customers/searches/index.html.erb
@@ -15,8 +15,7 @@
     <tbody>
       <% @posts.each do |post| %>
         <tr>
-          <td><%= post.title %></td>
-          <td><%= post.body %></td>
+          <td><%= post.content %></td>
         </tr>
       <% end %>
     </tbody>
