--- a/app/assets/stylesheets/customers/customers.scss
+++ b/app/assets/stylesheets/customers/customers.scss
@@ -3,10 +3,15 @@
 }
 .button {
   display: block;
-  width: 230px;
   text-align: center;
   background-color: #ebebeb;
   padding: 5px;
   border-radius: 5px;
   border: 1px solid black;
+}
+
+/*----------edit-------------*/
+
+.edit-btn{
+    margin: 0 auto;
 }
