--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -1,29 +1,43 @@
-
-<div class="text-center shadow">
-    
-    <h2>edit</h2>
-
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4 edit-btn text-center">
+      
+      <div class="mb-3 pt-5">
+      <h2>編集ページ</h2>
+      </div>
           <%= form_with model:@customer ,local:true do |f| %>
            
+           <div class="mb-3 pt-3">
+            <label for="exampleFormControlInput1" class="form-label">名前</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" name="customer[name]" >
+          </div>
           
-            <div class="mb-4">
-              <%= f.label :名前 %><br />
-              <%= f.text_field :name, autofocus: true%>
-            </div>
-            
-            <div class="mb-4">
-              <%= f.label :自己紹介 %><br>
-              <%= f.text_area :introduction%>
-            </div>
+          <div class="mb-3 pt-3 pb-3">
+            <label for="exampleFormControlInput1" class="form-label">自己紹介</label>
+            <textarea type="area" class="form-control form-control-lg" id="exampleFormControlInput1" name="customer[introduction]" ></textarea>
+          </div>
+          
             
             <label for="image">
               <span class="button">プロフィール画像を選択</span><%= f.file_field :image, id: "image" %>
             </label>
-            <div id="file-name"></div>
+            <div><img id="preview" style="width:50%;"></div>
             
-            <div class="actions">
+            
+            <div>
               <%= f.submit "変更する" ,class:" btn btn-lg btn-primary mt-3"%>
             </div>
           <% end %>
-
+          
+        </div>
+    </div>
 </div>
+        <script>
+          $('#image').on('change', function (e) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                $("#preview").attr('src', e.target.result);
+            }
+            reader.readAsDataURL(e.target.files[0]);
+        });
+        </script>
