--- a/app/views/customers/posts/_form.html.erb
+++ b/app/views/customers/posts/_form.html.erb
@@ -13,8 +13,19 @@
         <label for="image">
              <span class="button">画像を選択</span><%= f.file_field  :post_image, id: "image" %>
         </label>
-        <div id="file-name"></div>
+        <img id="preview" style="width:100%;">
         
         <div class="form-group pt-4">
-            <%= f.submit "投稿する", class: 'btn btn-primary' %></div>
+            <%= f.submit "投稿する", class: 'btn btn-outline-danger' %></div>
     <% end %>
+    
+
+        <script>
+          $('#image').on('change', function (e) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                $("#preview").attr('src', e.target.result);
+            }
+            reader.readAsDataURL(e.target.files[0]);
+        });
+        </script>
