--- a/app/views/customers/posts/show.html.erb
+++ b/app/views/customers/posts/show.html.erb
@@ -15,28 +15,37 @@
                 <div class=" col-9 p-4  border rounded mt-3 shadow">
                     <div class="col-8 d-flex">
                         
-                        <div class="col-auto border rounded">
+                        <div class="col-auto mr-5 border rounded">
                             <!--画像-->
                             <%= render "customers/shared/image_attached", post: @post %>
                         </div>
                         
-                        <div class="col-auto ">
+                        <div class="col-auto pl-5">
                             <!--フォローボタン-->
                         <%= render "customers/relationships/follow",customer: @customer  %>
                         </div>
                         
                     </div>
                     <ul>
-                        <div><%= @post.content %></div>
+                        <div class="p-2 mt-2"><%= @post.content %></div>
+                        
+                        <!-------------投稿画像-------->
                         <div>
                             <% if @post.post_image.attached? %>
                                 <%= image_tag @post.post_image %>
                             <% end %>
                         </div>
-                        <li>ジム</li>
-                        <li><%= render 'customers/posts/tag_list', tag_list: @post.tag_list %></li>
+                        <!--------タグリスト----------->
+                        <div><%= render 'customers/posts/tag_list', tag_list: @post.tag_list %></div>
                     </ul>
-
+                    
+                     <!--いいねボタン-->
+                
+                    <td id="favorite_buttons_<%= @post.id  %>">
+                         <%= render 'customers/favorites/favorite', post: @post %><%= @post.favorites.count %>
+                    </td>
+                    
+                    <td><%= link_to "編集", edit_post_path(@post.id),class:"btn btn-success" %></td>
                     <!--コメントフォーム-->
                     <td id="favorite_buttons_<%= @post.id  %>">
                         <td><%= render "customers/post_comments/post_comment" %></td>
@@ -58,13 +67,7 @@
                     <% end %>
                 </div>
                 
-                <!--いいねボタン-->
-
-                <td id="favorite_buttons_<%= @post.id  %>">
-                     <%= render 'customers/favorites/favorite', post: @post %><%= @post.favorites.count %>
-                </td>
-                
-                <%= link_to "編集", edit_post_path(@post.id) %>
+    
             </div>
         </div>
     </div>
